Fix a crash when tring to clone document via Python plugin

BUG:457080